[package]
name = "dispair"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
derive_more = {version = "2.0.1", features = ["add"]}
dirs = "6.0.0"
futures = "0.3.31"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
