[package]
name = "dispair"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
derive_more = {version = "2.0.1", features = ["add"]}
dirs = "6.0.0"
futures = "0.3.31"
rand = "0.9.2"
ratatui = { version = "0.29.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"

[target.'cfg(target_family = "wasm")'.dependencies]
derive_more = {version = "2.0.1", features = ["add"]}
futures = "0.3.31"
rand = "0.9.2"
ratatui = { version = "0.29.0", default-features = false, features = ["all-widgets"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
getrandom = {version = "0.3",features = ["wasm_js"]}
ratzilla = "0.2.0"
web-sys = {version = "0.3.65", features = ["Storage"]}
web-time = "1.1.0"


[profile.dev]
opt-level = 1
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
strum = {version = "0.27.2", features = ["derive"]}
textwrap = "0.16.2"

[lints.clippy]
pedantic = "warn"
style = "warn"
